--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://trusted-source.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; script-src 'self' https://cdnjs.cloudflare.com https://www.googletagmanager.com; font-src 'self' https://cdnjs.cloudflare.com;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta name="description" content="مسابقة Cash 4 Views، اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل الخاصة بالمسابقة.">
+    <meta name="description" content="مدونة Cash 4 Views، اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل الخاصة بالمسابقة.">
     <meta name="keywords" content="Cash 4 Views, بروموكود, أخبار المسابقة, دعم المسابقة">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="مسابقة Cash 4 Views">
+    <meta property="og:title" content="مدونة Cash 4 Views">
     <meta property="og:description" content="اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل!">
-    <meta property="og:image" content="img/logo.png">
-    <title>مسابقة Cash 4 Views</title>
+    <meta property="og:image" content="img/main.jpg">
+    <title>مدونة Cash 4 Views</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&family=Noto+Sans+Arabic:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet" defer>
-    <link rel="preload" href="img/main.jpg" as="image">
+    <link rel="preload" href="img/logo.png" as="image">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J2F9LDBNET"></script>
     <script src="analytics.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="lang-dropdown" aria-label="اختيار اللغة">
@@ -30,22 +31,17 @@
         </div>
     </div>
     <div class="container">
-        <section id="home" class="section">
+        <section id="news" class="section">
             <div class="profile">
                 <img src="img/main.jpg" loading="lazy" onerror="this.onerror=null; this.src='img/default.jpg';" alt="Cash 4 Views">
-                <h2 data-translate="profileTitle">مسابقة Cash 4 Views</h2>
+                <h2 data-translate="profileTitle">مدونة Cash 4 Views</h2>
                 <p data-translate="profileDesc">آخر الأخبار والإعلانات</p>
             </div>
-            <div class="news-list" id="news-content" aria-live="polite">
-                <div class="spinner" aria-label="جاري التحميل">
-                    <i class="fas fa-spinner"></i>
-                    <span class="loading-text" data-loading-text></span>
-                </div>
-            </div>
+            <div class="news-list" id="news-content" aria-live="polite"></div>
         </section>
-        <section id="contactUs" class="section">
-            <h3 data-translate="contactUs">راسلنا</h3>
-            <div class="links" id="contact-links"></div>
+        <section id="telegram" class="section">
+            <h3 data-translate="channelsHeader">قنوات تلغرام الرسمية</h3>
+            <div class="links" id="telegram-links"></div>
         </section>
         <section id="promocode" class="section">
             <h3 data-translate="promocode">البروموكود</h3>
@@ -64,6 +60,5 @@
     <footer>
         <p data-translate="footer">Powered by <span>Cash 4 Views</span></p>
     </footer>
-    <script src="script.js" defer></script>
 </body>
 </html>
