--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://trusted-source.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; script-src 'self' https://cdnjs.cloudflare.com https://www.googletagmanager.com; font-src 'self' https://cdnjs.cloudflare.com;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta name="description" content="مدونة Cash 4 Views، اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل الخاصة بالمسابقة.">
+    <meta name="description" content="مسابقة Cash 4 Views، اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل الخاصة بالمسابقة.">
     <meta name="keywords" content="Cash 4 Views, بروموكود, أخبار المسابقة, دعم المسابقة">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="مدونة Cash 4 Views">
