--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="مدونة Cash 4 Views">
     <meta property="og:description" content="اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل!">
     <meta property="og:image" content="img/main.jpg">
-    <title>مدونة Cash 4 Views</title>
+    <title>مسابقة Cash 4 Views</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
