--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="مسابقة Cash 4 Views، اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل الخاصة بالمسابقة.">
     <meta name="keywords" content="Cash 4 Views, بروموكود, أخبار المسابقة, دعم المسابقة">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="مدونة Cash 4 Views">
+    <meta property="og:title" content="مسابقة Cash 4 Views">
     <meta property="og:description" content="اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل!">
     <meta property="og:image" content="img/main.jpg">
     <title>مسابقة Cash 4 Views</title>
@@ -34,7 +34,6 @@
         <section id="news" class="section">
             <div class="profile">
                 <img src="img/main.jpg" loading="lazy" onerror="this.onerror=null; this.src='img/default.jpg';" alt="Cash 4 Views">
-                <h2 data-translate="profileTitle">مدونة Cash 4 Views</h2>
                 <p data-translate="profileDesc">آخر الأخبار والإعلانات</p>
             </div>
             <div class="news-list" id="news-content" aria-live="polite"></div>
