--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
     <footer>
-        <p data-translate="footer">Powered by <span>Cash 4 Views</span></p>
+        <p data-translate="footer">Powered by <span>1xBET بالعربي</span></p>
     </footer>
 </body>
 </html>
