--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
     <!-- End Matomo Tag Manager -->
 
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://trusted-source.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; script-src 'self' https://cdnjs.cloudflare.com https://www.googletagmanager.com; font-src 'self' https://cdnjs.cloudflare.com;">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        img-src 'self' https://trusted-source.com;
+        style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com;
+        script-src 'self' https://cdnjs.cloudflare.com https://www.googletagmanager.com https://cdn.matomo.cloud;
+        font-src 'self' https://cdnjs.cloudflare.com;
+        connect-src 'self' https://lebaofun.matomo.cloud https://cdn.matomo.cloud;
+        frame-src https://www.googletagmanager.com;
+    ">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="description" content="مسابقة Cash 4 Views، اكتشف الأخبار الجديدة، بروموكود، وروابط التواصل الخاصة بالمسابقة.">
     <meta name="keywords" content="Cash 4 Views, بروموكود, أخبار المسابقة, دعم المسابقة">
